<resources>
    <string name="app_name">lemonadeo</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lemonade_description">This is the title of the lemonade game</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="login">Login</string>
    <string name="emailx">email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="registerx">REGISTER</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="directions">Directions</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="these_are_my_cats">These are my cats Molly and Daisy!</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="menu">Menu</string>
    <string name="todo4">TODO</string>
    <string name="todo6">TODO</string>
    <string name="daisy2">Daisy</string>
    <string name="molly_is_the_one_on_the_left">Molly is the one on the LEFT</string>
    <string name="daisy_is_the_one_on_the_right">Daisy is the one on the RIGHT</string>
    <string name="molly2">Molly</string>
    <string name="daisy_is_in_front_of_the_vase">Daisy is in front of the vase</string>
    <string name="todo7">TODO</string>
    <string name="daisy">Daisy</string>
    <string name="molly">Molly</string>
    <string name="daisy_is_the_one_on_right_and_molly_is_the_one_on_left">Daisy is the one on RIGHT and Molly is the one on LEFT</string>
    <string name="todo00">TODO</string>
    <string name="todo000">TODO</string>
    <string name="button">Button</string>
    <string name="button0">Button</string>
    <string name="back">back</string>
    <string name="next00">next</string>
    <string name="where_is_daisy">Where is Daisy?</string>
    <string name="back0">back</string>
    <string name="she_is_in_front_of_the_red_vase">She is IN FRONT OF the red vase.</string>
    <string name="todo0">TODO</string>
    <string name="next0">next</string>
    <string name="where_is_molly">Where is Molly?</string>
    <string name="she_is_at_the_back_of_the_fish_tank">She is AT THE BACK of the fish tank.</string>
    <string name="next_">next</string>
    <string name="back00">back</string>
    <string name="todo_">TODO</string>
    <string name="back_">back</string>
    <string name="finish">finish</string>
    <string name="todo_o">TODO</string>
    <string name="where_is_molly_now">Where is Molly now?</string>
    <string name="she_is_under_the_newspaper">She is UNDER the newspaper.</string>
    <string name="daisy_is_the_one_on_the_right_and_molly_is_the_one_on_the_left">Daisy is the one on the RIGHT and Molly is the one on the LEFT.</string>
    <string name="go_back_to_homepage">Go Back to Homepage</string>
    <string name="thanks_for_helping_me_with_my_cats_they_are_really_hard_to_find">Thanks for helping me with my cats they are really hard to find.</string>
    <string name="good_job">Good Job!</string>
    <string name="todo_0">TODO</string>
    <string name="todo_000">TODO</string>
    <string name="back__">back</string>
    <string name="next__">next</string>
    <string name="todo__">TODO</string>
    <string name="be_silent">Be silent.</string>
    <string name="find_similar_pictures">Find Similar Pictures</string>
    <string name="todo12">TODO</string>
    <string name="Todo">TODO</string>
    <string name="Todo_">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo44">TODO</string>
    <string name="todo666">TODO</string>
    <string name="feedback_fantastic">Fantastic!</string>
    <string name="feedback_good_job">Good Job!</string>
    <string name="feedback_better_next_time">You are getting better every time!</string>
    <string name="score_message">Score: %d</string>
    <string name="tv">TextView</string>
    <string name="tv2">TextView</string>
    <string name="homepage">Homepage</string>
    <string name="try_again">Try Again</string>
    <string name="nexts">Next</string>
    <string name="submit">Submit</string>
    <string name="tododd">TODO</string>
    <string name="enter_spelling">Enter spelling</string>
    <string name="enter_spellingx">Enter spelling</string>
    <string name="submit2">Submit</string>
    <string name="nextkk">Next</string>
    <string name="play_pronunciation">Play Pronunciation</string>
    <string name="hear_the_sound">Hear the Sound</string>
    <string name="todocc">TODO</string>
    <string name="enter_your_spelling">Enter your spelling</string>
    <string name="spelling">Spelling</string>
    <string name="textviewee">TextView</string>
    <string name="textviewdd">TextView</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="seasons">seasons</string>
    <string name="todor">TODO</string>
    <string name="seasonss">seasons</string>
    <string name="lemonade">Lemonade</string>
    <string name="todoss">TODO</string>
    <string name="gaming">gaming</string>
    <string name="Todos">TODO</string>
    <string name="learning">learning</string>
    <string name="todoaa">TODO</string>
    <string name="logoutx">Logout</string>
    <string name="todoi">TODO</string>
    <string name="follow_the_ball">follow the ball</string>
    <string name="todo9">TODO</string>
    <string name="clock_game">clock game</string>
    <string name="todo01">TODO</string>
    <string name="days_game">days game</string>
    <string name="todo02">TODO</string>
    <string name="remember_the_digits_game">remember the digits game</string>
    <string name="go_back_to_homepage_">Go Back to Homepage</string>
    <string name="todo03">TODO</string>
    <string name="todo04">TODO</string>
    <string-array name="spelling_words">
        <item>Autumn</item>
        <item>Wednesday</item>
        <item>Orange</item>
        <item>Saturday</item>
        <item>January</item>
        <item>Green</item>
        <item>Tongue</item>
        <item>Wrist</item>
        <item>Finger</item>
        <item>Firefighter</item>
    </string-array>
    <string name="password_hint">●●●●●●●●</string>
    <string name="game_menu">Game Menu</string>
    <string name="check">Check</string>
    <string name="newx">New</string>
    <string name="newww">new</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="minutee">minute</string>
    <string name="hourr">hour</string>
    <string name="game_menu_">Game Menu</string>
    <string name="todo90">TODO</string>
    <string name="_00">00</string>
    <string name="_00_">00</string>
    <string name="analog">analog</string>
    <string name="see_on_analog">see on analog</string>
    <string name="monday__">Monday</string>
    <string name="tuesday__">Tuesday</string>
    <string name="wednesday__">Wednesday</string>
    <string name="thursday__">Thursday</string>
    <string name="friday__">Friday</string>
    <string name="saturday__">Saturday</string>
    <string name="sunday__">Sunday</string>
    <string name="shuffle__">Shuffle</string>
    <string name="exit__">EXIT</string>
    <string name="order_the_days_of_the_week_correct_and_get_the_lemonade">Order the days of the week correct and get the lemonade!</string>
    <string name="textview___">TextView</string>
    <string name="textview____">TextView</string>
    <string name="button__">Button</string>
    <string name="easy">Easy</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">Hard</string>
    <string name="select_difficulty">SELECT DIFFICULTY:</string>
    <string name="game_menu___">Game Menu</string>
    <string name="check__">Check</string>
    <string name="newxx">New</string>
    <string name="new_">new</string>
    <string name="_00__">00</string>
    <string name="_00a">00</string>
    <string name="hourss">hour</string>
    <string name="todoxx">TODO</string>
    <string name="memorize_the_digits_in_5_seconds_and_write_the_number_in_forwardly_or_backwardly">Memorize the digits in 5 seconds and write the number in forwardly or backwardly.</string>
    <string name="remember_forwardly">Remember Forwardly</string>
    <string name="remember_backwardly">Remember Backwardly</string>
    <string name="days_of_the_week">Days of the Week</string>
    <string name="exit">EXIT</string>
    <string name="go_back_to_homepage__">Go Back to Homepage</string>
    <string name="learning_directions">learning directions</string>
    <string name="learn_multiplication">learn multiplication</string>
    <string name="learning_days">learning days</string>
    <string name="learning_months">learning months</string>
    <string name="clock_learning">clock learning</string>
    <string name="learning_seasons">learning seasons</string>
    <string name="e_mail">E-mail</string>
    <string name="login_">LOGIN</string>
    <string name="register_page">REGISTER Page</string>
    <string name="choose_the_similar_one">Choose the similar one!</string>
    <string name="exit_">Exit</string>
    <string name="_exit_">EXIT</string>
    <string name="seasons_of_the_year">Seasons of the Year</string>
    <string name="learn_the_months">Learn the Months</string>
    <string name="login_page">Login Page</string>
    <string name="analog_clock_game">Analog Clock Game</string>
    <string name="digital_clock_game">Digital Clock Game</string>
    <string name="learning_analog_clock">Learning Analog Clock</string>
    <string name="learning_digital_clock">Learning Digital Clock</string>
    <string name="select_difficulty_">SELECT DIFFICULTY:</string>
    <string name="easy_">Easy</string>
    <string name="medium_">MEDIUM</string>
    <string name="hard_">Hard</string>
    <string name="submit_your_answer">Submit Your Answer</string>
    <string name="oh_i_saw_her_she_is_behind_the_box_now">Oh! I saw her she is behind the box now.</string>
    <string name="where_is_she">Where is she?</string>
    <string name="choose">Choose</string>
    <string name="score">Score</string>
    <string name="result">Result</string>
    <string name="this_is_my_chicken_penny_she_can_be_really_naughty_can_you_help_me_find_her">This is my chicken Penny. She can be really naughty can you help me find her?</string>
    <string name="months_game">months game</string>
    <string name="spelling_game">spelling game</string>
    <string name="multiplication_game">multiplication game</string>
    <string name="memory_game">Memory Game</string>
    <string name="similar_picture_game">similar picture game</string>
    <string name="thanks_for_helping_me_with_penny_she_is_really_hard_to_find">Thanks for helping me with Penny. She is really hard to find.</string>
    <string name="where_is_penny">Where is Penny?</string>
    <string name="she_is_in_front_of_the_box">She is in front of the box.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">tuesday</string>
    <string name="thursday">thursday</string>
    <string name="wednesday">wednesday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="click_for_the_sound">Click for the sound.</string>
    <string name="learn_the_days_of_the_week">Learn the Days of the Week</string>
    <string name="learn_the_seasons">Learn the Seasons</string>
    <string name="spring">Spring</string>
</resources>